# uat-automation-framework

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  LICENSE  README.es.md  README.md  README.pt-BR.md  SESSION_NOTES.md  config.yaml  debug_demo_login.py  debug_login_error.py  index.html  pyproject.toml
.github/: copilot-instructions.md
10/: index.html
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
30/: index.html
31/: index.html
32/: index.html
7/: index.html
8/: index.html
9/: index.html
core/: config.py  config_resolver.py  driver_manager.py
docs/: PARALLEL_TESTING.md  PROJECT_SESSION_SUMMARY.md
features/: cart.feature  cart_negative.feature  checkout.feature  checkout_negative.feature  environment.py  login.feature  login_negative.feature  problem_user_journey.feature  product_sorting.feature  product_sorting_negative.feature  product_sorting_problem_user.feature  register.feature  smoke.feature  user_journey_purchase.feature  user_journey_variations.feature
last-history/: history.json
pages/: __init__.py  base_page.py  cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  inventory_page.py  login_page.py  register_page.py
scripts/: validate_readme_metrics.py
(+1468 files in other folders)
